user admin panel complete

--- a/Frontend/src/Component/Product/productDetailStyle.css
+++ b/Frontend/src/Component/Product/productDetailStyle.css
@@ -7,6 +7,10 @@
   display: flex;
 }
 
+.Carousel-indicators-18 {
+  display: none !important;
+}
+
 .greenColor {
   color: green;
   margin-left: 10px;
